# TrendSense

./: .env.example  .gitconfig  .gitignore  .replit  .replit.clean  .replit.fixed  .replit.new  ARCHITECTURE.md  Critical_VC_Assessment_TrendSense.md  ENABLE_FIRESTORE_API.md  FIREBASE_SETUP.md  FIREBASE_SETUP_GUIDE.md  LensIQ_Enhancement_Plan.md  LensIQ_Pitch_Deck_Content.md  MONGODB_SETUP_GUIDE.md  README.md  ROUTE-DOCUMENTATION.md  SETUP_FIRESTORE_DATABASE.md  STANDALONE-DASHBOARD.md  TRENDSENSE_OVERVIEW.md  VC_PE_ENGINE.md  VC_PE_PLATFORM.md  analysis.json  api_server.py  app.py  basic_server.py  check_database.sh  check_db.py  check_push.sh  create_story_page.html  dashboard.html  data_moat.html  data_moat_implementation_plan.md  data_moat_upload.html  direct-start.sh  direct_push.sh  document.json  document_upload.html  export_code.sh  fallback.html  (+106 more)
ai_copilot/: agent.js  agent.test.html
backend/: app.py  config.py  database.py
data/: curl_output.txt  package-lock.json  package.json  requirements.txt  tsconfig.json
docs/: AI-DRIVEN-ARCHITECTURE.md  EXPORT_SUMMARY.md  MONGODB-INTEGRATION.md  README.md  SETUP_INSTRUCTIONS.md  WIREFRAME-UI.md  demo_mode_guide.md
sample_data/: carbon_data_sample.csv  esg_data_sample.csv
scripts/: check_data.py  check_vector_db.py  enhance_graph_data.py  export_code_tar.sh  generate_additional_data.py  init_db.py  populate_timeseries_data.py  scrape_esg_data.py  seed_mongo_vc_data.py  setup_mongodb.py  update_vector_db.py
tests/: README.md  conftest.py  run_comprehensive_tests.py  test_app.py  test_app_routes.py  test_basic_functionality.py  test_comprehensive.py  test_comprehensive_final.py  test_copilot.py  (+18 more)
(+208 files in other folders)
